src/test/ui/parser/trait-bounds-not-on-impl.rs
// compile-flags: -Z parse-only -Z continue-parse-after-error

trait Foo {
}

struct Bar;

impl Foo + Owned for Bar { //~ ERROR expected a trait, found type
}

fn main() { }
